--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,11 +11,37 @@
   		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 	</head>
 	<body id="ccid" style="text-align:center;">
-
 		
-
 		<div id="app">
-			
+				<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="text-align:left;">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Logo</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <button type="button" class="btn btn-dark nav-link" v-on:click="userlogin">User Login</button>
+                </li>
+                <li class="nav-item">
+                  <button type="button" class="btn btn-dark nav-link" v-on:click="employeelogin">Employee Login</button>
+                </li>
+                <li class="nav-item">
+                  <button type="button" class="btn btn-dark nav-link" v-on:click="adminlogin">Admin Login</button>
+                </li>  
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Link</a></li>
+                    <li><a class="dropdown-item" href="#">Another link</a></li>
+                    <li><a class="dropdown-item" href="#">A third link</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>	
 
 
 
