--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -15,7 +15,7 @@
 		<div id="app">
 				<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="text-align:left;">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="#">Kudawala</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,11 +31,10 @@
                   <button type="button" class="btn btn-dark nav-link" v-on:click="adminlogin">Admin Login</button>
                 </li>  
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">More Options</a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Link</a></li>
-                    <li><a class="dropdown-item" href="#">Another link</a></li>
-                    <li><a class="dropdown-item" href="#">A third link</a></li>
+                    <li><a class="dropdown-item" href="#">Contact Us</a></li>
+                    <li><a class="dropdown-item" href="#">Testimonials</a></li>
                   </ul>
                 </li>
               </ul>
